--- a/ShopTree/ShopTree.csproj
+++ b/ShopTree/ShopTree.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Areas\Admin\Controllers\ProductsController.cs" />
     <Compile Include="Areas\Admin\Models\BlogViewModel.cs" />
     <Compile Include="Areas\Admin\Models\CategoryViewModel.cs" />
+    <Compile Include="Areas\Admin\Models\ChangePasswordViewModel.cs" />
     <Compile Include="Areas\Admin\Models\LoginViewModelAdmin.cs" />
     <Compile Include="Areas\Admin\Models\ProductViewModelAdmin.cs" />
     <Compile Include="Common\Constants.cs" />
@@ -592,6 +593,7 @@
     <Content Include="Models\ShopTree.edmx.diagram">
       <DependentUpon>ShopTree.edmx</DependentUpon>
     </Content>
+    <Content Include="Areas\Admin\Views\Employees\ChangePassword.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
