--- a/ShopTree/ShopTree.csproj
+++ b/ShopTree/ShopTree.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Areas\Admin\Models\BlogViewModel.cs" />
     <Compile Include="Areas\Admin\Models\CategoryViewModel.cs" />
     <Compile Include="Areas\Admin\Models\ChangePasswordViewModel.cs" />
+    <Compile Include="Areas\Admin\Models\EmployeeViewModel.cs" />
     <Compile Include="Areas\Admin\Models\LoginViewModelAdmin.cs" />
     <Compile Include="Areas\Admin\Models\ProductViewModelAdmin.cs" />
     <Compile Include="Common\Constants.cs" />
@@ -594,6 +595,7 @@
       <DependentUpon>ShopTree.edmx</DependentUpon>
     </Content>
     <Content Include="Areas\Admin\Views\Employees\ChangePassword.cshtml" />
+    <Content Include="Areas\Admin\Views\Employees\EmployeeProfile.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
