--- a/ShopTree/ShopTree.csproj
+++ b/ShopTree/ShopTree.csproj
@@ -596,6 +596,8 @@
     </Content>
     <Content Include="Areas\Admin\Views\Employees\ChangePassword.cshtml" />
     <Content Include="Areas\Admin\Views\Employees\EmployeeProfile.cshtml" />
+    <Content Include="Areas\Admin\Views\Blogs\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Blogs\Detail.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
