--- a/ShopTree/ShopTree.csproj
+++ b/ShopTree/ShopTree.csproj
@@ -598,6 +598,8 @@
     <Content Include="Areas\Admin\Views\Employees\EmployeeProfile.cshtml" />
     <Content Include="Areas\Admin\Views\Blogs\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Blogs\Detail.cshtml" />
+    <Content Include="Areas\Admin\Views\Employees\AllEmployee.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_EmployeeRow.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
